<resources>


    <string name="app_name">Smart Parking</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="userdashboard">User Dashboard</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_parking_form">Parking Form</string>
    <string name="Home">home</string>
    <string name="feedback">Your Feedback</string>
    <string name="viewSlot">View Slots</string>
    <string name="Exit">Exit</string>
    <string name="dashboard">dashboard</string>
    <string name="BookSlot">Book Your Slot</string>
    <string name="Feedback">feedback</string>
    <string name="ViewSlots">viewslots</string>
</resources>