<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDashboard"
    android:background="@drawable/basic"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view1"
        app:headerLayout="@layout/menu_header"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00008577"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_menu_24"
                app:titleMarginStart="5000dp"
                >

            </androidx.appcompat.widget.Toolbar>
            <LinearLayout class="androidx.appcompat.app.AlertController$RecycleListView"
                android:layout_width="wrap_content"
                android:id="@+id/l1"

                android:layout_height="140dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView9"
                    android:textColor="@color/white"
                    android:textSize="35dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userdashboard"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/user"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="390dp"
                android:layout_height="230dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/l1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                //Card1

                <androidx.cardview.widget.CardView
                    android:id="@+id/c1"
                    android:layout_width="390dp"
                    android:layout_height="220dp"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@drawable/frameborder">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView8"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/BookSlot"
                            android:textColor="@color/teal_700"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="85dp"
                            android:layout_height="77dp"
                            android:layout_marginStart="155dp"
                            android:layout_marginTop="45dp"
                            android:src="@drawable/booking" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/l3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l2"
                android:layout_width="390dp"
                android:layout_height="230dp"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/c2"
                    android:layout_width="390dp"
                    android:layout_height="230dp"
                    android:layout_marginStart="1dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:background="@drawable/frameborder">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView9"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/feedback"
                            android:textColor="@color/teal_700"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="85dp"
                            android:layout_height="77dp"
                            android:layout_marginStart="155dp"
                            android:layout_marginTop="45dp"
                            android:src="@drawable/complaint" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <ImageView
                android:layout_width="450dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_login_bk"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l3"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.drawerlayout.widget.DrawerLayout>